janet-lsp-plus/src/editing/fixes/snapshots/janet_lsp_plus__editing__fixes__tests__create_function_for_a_top_level_call.snap
---
source: src/editing/fixes/tests.rs
expression: "(def x 1)\n\n(gre|et x)\n"
---
----- BEFORE FIX
(def x 1)

(greet x)
    ↑


----- AFTER FIX: Create function `greet`
(def x 1)

(defn greet [x])

(greet x)
