janet-lsp-plus/src/editing/fixes/snapshots/janet_lsp_plus__editing__fixes__tests__create_function_names_a_qualified_argument_by_its_last_segment.snap
---
source: janet-lsp-plus/src/editing/fixes/tests.rs
expression: (comb|ine string/join join)
---
----- BEFORE FIX
(combine string/join join)
     ↑

----- AFTER FIX: Create function `combine`
(defn combine [join arg2])

(combine string/join join)
