janet-lsp-plus/src/editing/fixes/snapshots/janet_lsp_plus__editing__fixes__tests__declare_below_a_shebang.snap
---
source: src/editing/fixes/tests.rs
expression: "#!/usr/bin/env janet\n(gre|et 1)\n"
---
----- BEFORE FIX
#!/usr/bin/env janet
(greet 1)
    ↑


----- AFTER FIX: Ignore `greet` on this line
#!/usr/bin/env janet
# janet-zed: ignore unknown-symbol greet
(greet 1)

----- AFTER FIX: Declare `greet` in this file
#!/usr/bin/env janet
# janet-zed: declare greet
(greet 1)
