janet-lsp-plus/src/editing/fixes/snapshots/janet_lsp_plus__editing__fixes__tests__define_a_var_to_set.snap
---
source: src/editing/fixes/tests.rs
expression: "(defn f []\n  (set |counter 1))"
---
----- BEFORE FIX
(defn f []
  (set counter 1))
       ↑

----- AFTER FIX: Define `counter`
(defn f []
  (var counter nil)
  (set counter 1))
