janet-lsp-plus/src/editing/fixes/snapshots/janet_lsp_plus__editing__fixes__tests__define_in_a_defn_body.snap
---
source: src/editing/fixes/tests.rs
expression: "(defn f [x]\n  (print x)\n  (+ x |y))\n"
---
----- BEFORE FIX
(defn f [x]
  (print x)
  (+ x y))
       ↑


----- AFTER FIX: Define `y`
(defn f [x]
  (print x)
  (def y nil)
  (+ x y))
