janet-lsp-plus/src/editing/fixes/snapshots/janet_lsp_plus__editing__fixes__tests__define_outside_an_if_branch.snap
---
source: src/editing/fixes/tests.rs
expression: "(defn f [x]\n  (if x\n    |y\n    0))"
---
----- BEFORE FIX
(defn f [x]
  (if x
    y
    ↑
    0))

----- AFTER FIX: Define `y`
(defn f [x]
  (def y nil)
  (if x
    y
    0))
